{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 27,
  "lineage": "4429fc58-52e2-79a4-8aa2-18af15bfdbb2",
  "resources": [
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ca32bbc84273381",
            "arn": "arn:aws:ec2:us-east-1:211811255273:instance/i-01e7c81d4be2bbbd6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "clientvpn-profile",
            "id": "i-01e7c81d4be2bbbd6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clientvpn-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d54b09c71f12059c"
              }
            ],
            "primary_network_interface_id": "eni-0d54b09c71f12059c",
            "private_dns": "ip-10-0-1-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:211811255273:key/bcad7f85-f9b4-473d-a5ee-4fe278549085",
                "tags_all": {
                  "Environment": "dev",
                  "Owner": "Arpit",
                  "Project": "VPN",
                  "Terraform": "true"
                },
                "throughput": 125,
                "volume_id": "vol-0917e6600076a4d8d",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0501ad0e8f276ad1b",
            "tags": {
              "Environment": "dev",
              "Name": "clientvpn-dev-linux",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "clientvpn-dev-linux",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02cbf8b12ba2d2b60"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "i-01e7c81d4be2bbbd6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.this",
            "module.iam.aws_iam_role.this",
            "module.iam.data.aws_iam_policy_document.assume_role",
            "module.networking.aws_subnet.app",
            "module.networking.aws_vpc.this",
            "module.security_groups.aws_security_group.linux"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211811255273:route-table/rtb-001dc50c75f527b42",
            "id": "rtb-001dc50c75f527b42",
            "owner_id": "211811255273",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "clientvpn-dev-app-rt",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "clientvpn-dev-app-rt",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-010833ef42acd79f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "rtb-001dc50c75f527b42",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211811255273:route-table/rtb-0795031127055355f",
            "id": "rtb-0795031127055355f",
            "owner_id": "211811255273",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "clientvpn-dev-db-rt",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "clientvpn-dev-db-rt",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-010833ef42acd79f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "rtb-0795031127055355f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5a368433864a61d",
            "region": "us-east-1",
            "route_table_id": "rtb-001dc50c75f527b42",
            "subnet_id": "subnet-0501ad0e8f276ad1b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "rtbassoc-0e5a368433864a61d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_route_table.app",
            "module.networking.aws_subnet.app",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb4d67539b3d0ef5",
            "region": "us-east-1",
            "route_table_id": "rtb-0795031127055355f",
            "subnet_id": "subnet-0ad4ee00fe9c08595"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "rtbassoc-0fb4d67539b3d0ef5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_route_table.db",
            "module.networking.aws_subnet.db",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211811255273:subnet/subnet-0501ad0e8f276ad1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0501ad0e8f276ad1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211811255273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "clientvpn-dev-app-subnet",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "clientvpn-dev-app-subnet",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "vpc_id": "vpc-010833ef42acd79f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "subnet-0501ad0e8f276ad1b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211811255273:subnet/subnet-0ad4ee00fe9c08595",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad4ee00fe9c08595",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211811255273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "clientvpn-dev-db-subnet",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "clientvpn-dev-db-subnet",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "vpc_id": "vpc-010833ef42acd79f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "subnet-0ad4ee00fe9c08595",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211811255273:vpc/vpc-010833ef42acd79f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f0a5ade2900735b0",
            "default_route_table_id": "rtb-0f08713a1f9a369b2",
            "default_security_group_id": "sg-00ec5391cc3a2ef57",
            "dhcp_options_id": "dopt-0d9c4cc8ced249637",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010833ef42acd79f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f08713a1f9a369b2",
            "owner_id": "211811255273",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "clientvpn-dev-vpc",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "clientvpn-dev-vpc",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "vpc-010833ef42acd79f8",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211811255273:security-group/sg-0c40be438dc668f78",
            "description": "Database Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c40be438dc668f78",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Database Access from Linux",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02cbf8b12ba2d2b60"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "clientvpn-dev-database-sg",
            "name_prefix": "",
            "owner_id": "211811255273",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "clientvpn-dev-database-sg",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "clientvpn-dev-database-sg",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-010833ef42acd79f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "sg-0c40be438dc668f78",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211811255273:security-group/sg-02cbf8b12ba2d2b60",
            "description": "Linux Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cbf8b12ba2d2b60",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/22"
                ],
                "description": "SSH from VPN",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "clientvpn-dev-linux-sg",
            "name_prefix": "",
            "owner_id": "211811255273",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "clientvpn-dev-linux-sg",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "clientvpn-dev-linux-sg",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-010833ef42acd79f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "sg-02cbf8b12ba2d2b60",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211811255273:security-group/sg-0b74ce142399a8251",
            "description": "Windows Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b74ce142399a8251",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/22"
                ],
                "description": "RDP from VPN",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "clientvpn-dev-windows-sg",
            "name_prefix": "",
            "owner_id": "211811255273",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "clientvpn-dev-windows-sg",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "clientvpn-dev-windows-sg",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-010833ef42acd79f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "sg-0b74ce142399a8251",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211811255273:security-group-rule/sgr-09495c032868f8aef",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09495c032868f8aef",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0c40be438dc668f78",
            "security_group_rule_id": "sgr-09495c032868f8aef",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "sgr-09495c032868f8aef",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security_groups.aws_security_group.database"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211811255273:security-group-rule/sgr-097d017b6a7c6a896",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-097d017b6a7c6a896",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-02cbf8b12ba2d2b60",
            "security_group_rule_id": "sgr-097d017b6a7c6a896",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "sgr-097d017b6a7c6a896",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security_groups.aws_security_group.linux"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211811255273:security-group-rule/sgr-06c3bc2f8dd3d5308",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-06c3bc2f8dd3d5308",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0b74ce142399a8251",
            "security_group_rule_id": "sgr-06c3bc2f8dd3d5308",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "sgr-06c3bc2f8dd3d5308",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security_groups.aws_security_group.windows"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211811255273:security-group-rule/sgr-0cc81778afb5bca71",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Database Access from Linux",
            "from_port": 5432,
            "id": "sgr-0cc81778afb5bca71",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-02cbf8b12ba2d2b60",
            "region": "us-east-1",
            "security_group_id": "sg-0c40be438dc668f78",
            "security_group_rule_id": "sgr-0cc81778afb5bca71",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "sgr-0cc81778afb5bca71",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security_groups.aws_security_group.database",
            "module.security_groups.aws_security_group.linux"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "linux_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211811255273:security-group-rule/sgr-0d88c5e60cd9a5eef",
            "cidr_ipv4": "172.16.0.0/22",
            "cidr_ipv6": null,
            "description": "SSH from VPN",
            "from_port": 22,
            "id": "sgr-0d88c5e60cd9a5eef",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-02cbf8b12ba2d2b60",
            "security_group_rule_id": "sgr-0d88c5e60cd9a5eef",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "sgr-0d88c5e60cd9a5eef",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security_groups.aws_security_group.linux"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "windows_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211811255273:security-group-rule/sgr-00a1a2c76568f5bf6",
            "cidr_ipv4": "172.16.0.0/22",
            "cidr_ipv6": null,
            "description": "RDP from VPN",
            "from_port": 3389,
            "id": "sgr-00a1a2c76568f5bf6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0b74ce142399a8251",
            "security_group_rule_id": "sgr-00a1a2c76568f5bf6",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "sgr-00a1a2c76568f5bf6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security_groups.aws_security_group.windows"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b0ea68c435eb488d",
            "arn": "arn:aws:ec2:us-east-1:211811255273:instance/i-03fcb438e61f6bd76",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "clientvpn-profile",
            "id": "i-03fcb438e61f6bd76",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "clientvpn-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08657cdf140fe92ab"
              }
            ],
            "primary_network_interface_id": "eni-08657cdf140fe92ab",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:211811255273:key/bcad7f85-f9b4-473d-a5ee-4fe278549085",
                "tags_all": {
                  "Environment": "dev",
                  "Owner": "Arpit",
                  "Project": "VPN",
                  "Terraform": "true"
                },
                "throughput": 125,
                "volume_id": "vol-0b5f9a9a9fdb80c4c",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0501ad0e8f276ad1b",
            "tags": {
              "Environment": "dev",
              "Name": "clientvpn-dev-windows",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "clientvpn-dev-windows",
              "Owner": "Arpit",
              "Project": "VPN",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b74ce142399a8251"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211811255273",
            "id": "i-03fcb438e61f6bd76",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.this",
            "module.iam.aws_iam_role.this",
            "module.iam.data.aws_iam_policy_document.assume_role",
            "module.networking.aws_subnet.app",
            "module.networking.aws_vpc.this",
            "module.security_groups.aws_security_group.windows"
          ]
        }
      ]
    }
  ]
}